# varanus

./: .gitignore  README.md  README.rst  pyproject.toml
src/varanus/: __init__.py  __main__.py  __patch__.py  __version__.py  formatters.py  models.py  network.py  session.py  utils.py
src/varanus/api/: __init__.py
src/varanus/cli/: __init__.py  collect.py  item.py  job.py  jobs.py  project.py  scripts.py  spiders.py  stats.py  workers.py
src/varanus/core/: __init__.py  project.py  scripts.py  spiders.py  workers.py
src/varanus/lib/: __init__.py  collect.py  item.py  job.py  jobs.py  project.py  workers.py
tests/: test_varanus.py
