[tool.poetry]
name = "varanus"
version = "0.1.0"
description = "A command line spider monitoring tool"
authors = ["Steven Almeroth <sroth77@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
