[tool.poetry]
name = "varanus"
version = "0.1.0"
description = "A command line spider monitoring tool"
authors = ["Steven Almeroth <sroth77@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/scrapinghub/varanus"
classifiers = [ # https://pypi.org/classifiers/
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: System :: Monitoring"
]
packages = [
    {include="varanus", from="src"},
]

[tool.poetry.dependencies]
cliff = "*"
cmd2 = ">0.8.3,<0.9.0"  # noqa https://bugs.launchpad.net/python-cliff/+bug/1810213 https://review.opendev.org/#/c/571524/1/cliff/interactive.py
colorama = "*"
python = "^3.6"
scrapinghub = "*"
shub = "*"
plotly = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "*"
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
